// LOGICAL MODEL (for DDL generation)

Table client {
  clientId int [primary key]
  username varchar
  email varchar
  contact_address varchar
}

Table merchant {
  merchantId int [primary key]
  storename varchar
  description varchar
  email varchar
  contact_address varchar
  profit float
}

Table product {
  productId int [primary key]
  productname varchar
  price float
  stock int
  description varchar
  merchant_id int
}

Table orders {
  orderId int [primary key]
  client_id int
  order_date timestamp
}

Table order_item {
  order_id int [not null]
  product_id int
  quantity int

    Indexes {
    (order_id, product_id) [unique]
  }
}

Ref: merchant.merchantId < product.merchant_id
Ref: client.clientId < orders.client_id
Ref: orders.orderId < order_item.order_id
Ref: product.productId < order_item.product_id